--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(CT_PYTHON_RESOURCES
   )
   
 ctkMacroCompilePythonScript(
-  TARGET_NAME ChangeTracker
+  TARGET_NAME iGynePy
   SCRIPTS "${CT_PYTHON_SCRIPTS}"
   RESOURCES "${CT_PYTHON_RESOURCES}"
   DESTINATION_DIR ${CMAKE_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}
