--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,17 @@ endif()
 ADD_SUBDIRECTORY(Wizard)
 ADD_SUBDIRECTORY(Metrics)
 
-SET(CT_PYTHON_SCRIPTS
+SET(iG_PYTHON_SCRIPTS
     iGynePy.py
   )
   
-SET(CT_PYTHON_RESOURCES
+SET(iG_PYTHON_RESOURCES
   )
   
 ctkMacroCompilePythonScript(
   TARGET_NAME iGynePy
-  SCRIPTS "${CT_PYTHON_SCRIPTS}"
-  RESOURCES "${CT_PYTHON_RESOURCES}"
+  SCRIPTS "${iG_PYTHON_SCRIPTS}"
+  RESOURCES "${iG_PYTHON_RESOURCES}"
   DESTINATION_DIR ${CMAKE_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}
   INSTALL_DIR ${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}
   NO_INSTALL_SUBDIR
