--- a/Wizard/CMakeLists.txt
+++ b/Wizard/CMakeLists.txt
@@ -1,12 +1,14 @@
 SET(iGWizard_PYTHON_SCRIPTS
   __init__.py
   Helper.py
+  iGyneUI.py
   iGyneStep.py
   iGyneSelectProcedureStep.py
   iGyneSelectApplicatorStep.py
   iGyneLoadModelStep.py
   iGyneFirstRegistrationStep.py
   iGyneSecondRegistrationStep.py
+  iGyneNeedlePlanningStep.py
   iGyneNeedleSegmentationStep.py
  )
 
