--- a/iGynePyTemplate/Template/CMakeLists.txt
+++ b/iGynePyTemplate/Template/CMakeLists.txt
@@ -2,6 +2,6 @@ if(BUILD_TESTING)
   set(Launcher_Command ${Slicer_LAUNCH_COMMAND})
 endif()
 
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}/iGynePyTemplate)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}/Template)
 
 
