--- a/iGyneWizard/CMakeLists.txt
+++ b/iGyneWizard/CMakeLists.txt
@@ -1,4 +1,6 @@
-SET(iGWizard_PYTHON_SCRIPTS
+set(KIT_PYTHON_MODULE_NAME iGyneWizard)
+
+set(KIT_PYTHON_SCRIPTS
   __init__.py
   Helper.py
   iGyneStep.py
@@ -9,20 +11,16 @@ SET(iGWizard_PYTHON_SCRIPTS
   iGyneSecondRegistrationStep.py
   iGyneNeedlePlanningStep.py
   iGyneNeedleSegmentationStep.py
- )
-
-SET(iGWizard_PYTHON_RESOURCES
   )
-  
+
+set(KIT_PYTHON_RESOURCES
+  )
+
 ctkMacroCompilePythonScript(
-  TARGET_NAME iGyneWizard  SCRIPTS "${iGWizard_PYTHON_SCRIPTS}"
-  RESOURCES "${iGWizard_PYTHON_RESOURCES}"
-  DESTINATION_DIR ${Slicer_BINARY_DIR}/bin/Python/iGyneWizard
-  INSTALL_DIR ${Slicer_INSTALL_BIN_DIR}/Python
+  TARGET_NAME ${EXTENSION_NAME}${KIT_PYTHON_MODULE_NAME}
+  SCRIPTS "${KIT_PYTHON_SCRIPTS}"
+  RESOURCES "${KIT_PYTHON_RESOURCES}"
+  DESTINATION_DIR ${CMAKE_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}/${KIT_PYTHON_MODULE_NAME}
+  INSTALL_DIR ${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}/${KIT_PYTHON_MODULE_NAME}
+  NO_INSTALL_SUBDIR
   )
-
-#-----------------------------------------------------------------------------
-# Testing
-#
-if(BUILD_TESTING)
-endif(BUILD_TESTING)
