slicerMacroBuildScriptedModule instead of ctkMacro...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,10 @@ set(MODULE_PYTHON_RESOURCES
 #-----------------------------------------------------------------------------
 # Build
 #-----------------------------------------------------------------------------
-ctkMacroCompilePythonScript(
-  TARGET_NAME iGyne 
-  SCRIPTS "${MODULE_PYTHON_SCRIPTS}"
-  RESOURCES "${MODULE_PYTHON_RESOURCES}"
+slicerMacroCompilePythonScript(
+  NAME iGyne 
+  SCRIPTS ${MODULE_PYTHON_SCRIPTS}
+  RESOURCES ${MODULE_PYTHON_RESOURCES}
   DESTINATION_DIR ${CMAKE_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}
   INSTALL_DIR ${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}  NO_INSTALL_SUBDIR
   NO_INSTALL_SUBDIR
