fixed button dynamic names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,7 @@ slicerMacroCompilePythonScript(
   NAME iGyne 
   SCRIPTS ${MODULE_PYTHON_SCRIPTS}
   RESOURCES ${MODULE_PYTHON_RESOURCES}
-  DESTINATION_DIR ${CMAKE_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}
-  INSTALL_DIR ${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}  NO_INSTALL_SUBDIR
-  NO_INSTALL_SUBDIR
+  WITH_GENERIC_TESTS
   )
 
 #-----------------------------------------------------------------------------
